istio/old4-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # Implementação padrão do Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: on-premise
  name: web-app
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
    - route:
      - destination:
          host: web-app
          subset: production

# ---
# kind: VirtualService
# apiVersion: networking.istio.io/v1alpha3
# metadata:
#   name: web-app
#   namespace: on-premise
# spec:
#   hosts:
#     - "*"
#   gateways:
#     - ingress-gateway
#   http:
#     - route:
#       - destination:
#           host: web-app
#           subset: production
# ---
# kind: DestinationRule
# apiVersion: networking.istio.io/v1alpha3
# metadata:
#   name: web-app
#   namespace: on-premise
# spec:
#   host: web-app
#   subsets:
#     - labels:
#         version: production
#       name: production
